# original_nn

./: .gitignore  README.md  pyproject.toml  requirements.txt  scratch.py
