[tool.poetry]
name = "original_nn"
version = "0.1.0"
description = "original neural network"
authors = ["Hayato Shimizu <bigdanmcc@gmail.com>"]
license = "MIT"

[tool.poetry.dependencies]
python = "^3.9"
numpy = "^1.23.1"
scikit-learn = "^1.1.1"
matplotlib = "^3.5.2"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
